# CPS1011-SEM1-A-1920-Programming-Principles-in-C

./: .gitignore  build.bat  readme.txt
report/: listQs.c  report.dvi  report.out  report.tex
report/images/: 16bitarray.psd
report/snippets/: createQ.c  deleteQ.c  deleteQ_header.c  generate_header.c  generate_implementation.c  initMsgQs.c  initMsgQs_header.c  int_shoot_header.c  int_shoot_implementation.c  int_shuffle.c  int_shuffle_header.c  int_target.c  listQs.c  listQs_header.c  menu.c  menu_print.c  myint_t.c  myint_t_create_t.c  mystr_t.c  nums_str_repr.c  persistQ.c  purgeQs.c  purgeQs_header.c  random_utils.c  receiveMessages.c  restoreQ.c  sendIndividual.c  sendMessage.c  sendMessageBatch.c  sendMessage_header.c  shift_char_diagram.txt  str_create.c  str_create_t_header.c  str_generate.c  str_generate_header.c  str_shoot.c  str_shuffle.c  str_shuffle_header.c  str_sort.c  str_sort_header.c  (+6 more)
report/snippets/task2b/: batchPopulateNode.c  createQ.c  create_item.c  deleteQ.c  empty_all_qs.c  empty_q.c  free_item.c  (+18 more)
task1/: CMakeLists.txt  build.bat  debug_build.bat  functions.c  functions.h  main.c
task1/lib/: functions.c  functions.h  functions_str.c  functions_str.h  utils.c  utils.h
task2/: CMakeLists.txt  debug_build.bat  main.c  main_task2.c  main_task2b.c
task2/lib/: basic_queue.c  basic_queue.h  linked_list.c  linked_list.h  rlp.c  rlp.h  task2_utils.c  task2_utils.h  task2b_functions.c  task2b_functions.h  task2b_structs.h  task2b_utils.c  task2b_utils.h
task2/lib/task2a/: task2a_functions.c  task2a_functions.h
task2/lib/task2b/: rlp.c  rlp.h  task2b_functions.c  task2b_functions.h  task2b_structs.h  task2b_utils.c  task2b_utils.h
